# games

./: AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-24-action-permission-and-player-authority.md  2026-05-24-cultivation-world-engine-mvp.md  2026-05-24-shared-beast-and-combat-rewards.md
docs/superpowers/specs/: 2026-05-24-action-permission-and-player-authority-design.md  2026-05-24-cultivation-world-engine-design.md  2026-05-24-shared-beast-and-combat-rewards-design.md
rulesets/classic_xianxia/: actions.yaml  breakthroughs.yaml  combat_rewards.yaml  cultivation.yaml
rulesets/classic_xianxia/content/beasts/: firestripe_wolf.yaml
rulesets/classic_xianxia/content/materials/: beast_core_fragment.yaml  firestripe_pelt.yaml  warm_beast_blood.yaml
rulesets/classic_xianxia/content/spells/: fireball.yaml  wind_step.yaml
rulesets/classic_xianxia/content/status_effects/: light_wound.yaml  (+1 more)
src/world_engine/: __init__.py  actions.py  beasts.py  breakthrough.py  cli.py  combat.py  cultivation.py  ids.py  io.py  rewards.py  skills.py  validation.py
tests/: test_actions.py  test_beasts.py  test_breakthrough.py  test_combat.py  test_cultivation.py  test_io.py  test_rewards.py  test_skills.py  test_validation.py
world/: world.yaml
world/continents/tiannan/: known_entities.yaml
world/indexes/: entities.yaml
world/rules/: cultivation.yaml
worlds/qinglan_frontier/: world.yaml
worlds/qinglan_frontier/indexes/: entities.yaml  unresolved_hooks.yaml
worlds/xuanyuan/: world.yaml
worlds/xuanyuan/indexes/: entities.yaml  unresolved_hooks.yaml
(+28 files in other folders)
