[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cultivation-world-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
world-engine = "world_engine.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
